--- a/training/drain3.ini
+++ b/training/drain3.ini
@@ -6,8 +6,8 @@ masking = [
     {"regex_pattern":"(?<=\\/)(.*?)(?=\\,)|(?=\\/)(?<=\\=)(.*?)(?=\\ )", "mask_with": "PATH"},
     {"regex_pattern":"(?<=params=\\{)(.*?)(?=\\} )", "mask_with": "PARAMS"},
     {"regex_pattern":"((?<=[^A-Za-z0-9])|^)(\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\:\\d{1,5})|(\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})((?=[^A-Za-z0-9])|$)", "mask_with": "IP"},
-    {"regex_pattern":"(?<=duration=)\\d{0,190}\\.\\d{0,100}((ms|s|h)|\\s{0,}(ms|s|h))", "mask_with": "DURATION"},
-    {"regex_pattern":"\\d{1,100}(?:(\\.)|(\\s))\\d{0,100}\\s{0,2}((s )|(s)(?=$)|(ms )|(ms)(?=$)|(h )|(h)(?=$)|(seconds)|(second)|(minute)|(minutes)|(hour)|(hours))", "mask_with": "DURATION"},
+    {"regex_pattern":"(?<=duration=)(\\d{0,100}|(\\d{0,100}\\.\\d{0,100}))((((s)((?=$)|(?=\\s)))|(s )|(ms)((?=$)|(?=\\s))|(ms )|((h)((?=$)|(?=\\s))))|\\s{0,}(((s)((?=$)|(?=\\s)))|(s )|(ms)((?=$)|(?=\\s))|(ms )|((h)((?=$)|(?=\\s)))))", "mask_with": "DURATION"},
+    {"regex_pattern":"((\\d{1,100}(?:(\\.)|(\\s))\\d{0,100}\\s{0,2})|(\\d{1,100}))((\\d{1,100}(?:(\\.)|(\\s))\\d{0,100}\\s{0,2})|(\\d{1,100}))(((s)((?=$)|(?=\\s)))|(s )|(ms)((?=$)|(?=\\s))|(ms )|((h)((?=$)|(?=\\s)))|(h )|(seconds)|(second)|(minute)|(minutes)|(hour)|(hours))", "mask_with": "DURATION"},
     {"regex_pattern":"(INFO)|(WARNING)|(DANGER)|(ERROR)|(WARN)", "mask_with": "LOG_LEVEL"},
     {"regex_pattern":"(?:qtp)\\d{1,20}\\s\\d{1,10}", "mask_with": "QUEUED_THREAD_POOL_HASH"}
     ]
