--- a/training/drain3.ini
+++ b/training/drain3.ini
@@ -9,7 +9,8 @@ masking = [
     {"regex_pattern":"(?<=duration=)(\\d{0,100}|(\\d{0,100}\\.\\d{0,100}))((((s)((?=$)|(?=\\s)))|(s )|(ms)((?=$)|(?=\\s))|(ms )|((h)((?=$)|(?=\\s))))|\\s{0,}(((s)((?=$)|(?=\\s)))|(s )|(ms)((?=$)|(?=\\s))|(ms )|((h)((?=$)|(?=\\s)))))", "mask_with": "DURATION"},
     {"regex_pattern":"((\\d{1,100}(?:(\\.)|(\\s))\\d{0,100}\\s{0,2})|(\\d{1,100}))((\\d{1,100}(?:(\\.)|(\\s))\\d{0,100}\\s{0,2})|(\\d{1,100}))(((s)((?=$)|(?=\\s)))|(s )|(ms)((?=$)|(?=\\s))|(ms )|((h)((?=$)|(?=\\s)))|(h )|(seconds)|(second)|(minute)|(minutes)|(hour)|(hours))", "mask_with": "DURATION"},
     {"regex_pattern":"(INFO)|(WARNING)|(DANGER)|(ERROR)|(WARN)", "mask_with": "LOG_LEVEL"},
-    {"regex_pattern":"(?:qtp)\\d{1,20}\\s\\d{1,10}", "mask_with": "QUEUED_THREAD_POOL_HASH"}
+    {"regex_pattern":"(?:qtp)\\d{1,20}\\s\\d{1,10}", "mask_with": "QUEUED_THREAD_POOL_HASH"},
+    {"regex_pattern":"\\w{3}\\s\\w{3}\\s\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s\\w{3}\\s\\d{4}", "mask_with": "TIME_STAMP"}
     ]
 
 [PROFILING]
