--- a/training/drain3.ini
+++ b/training/drain3.ini
@@ -13,6 +13,13 @@ masking = [
     {"regex_pattern":"\\w{3}\\s\\w{3}\\s\\d{2}\\s\\d{2}:\\d{2}:\\d{2}\\s\\w{3}\\s\\d{4}", "mask_with": "TIME_STAMP"}
     ]
 
+[DRAIN]
+sim_th = 0.2
+depth = 2
+max_children = 100
+max_clusters = 1024
+extra_delimiters = []
+
 [PROFILING]
 enabled = True
 report_sec = 30
