Added Training Docker Container and Transformer Code

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,32 @@ services:
     environment:
       - GENERATE_NEW_DRAIN=no
       - W2V_WINDOW_SIZE=5
-      - W2V_EMBED_SIZE=300
+      - W2V_EMBED_SIZE=512
       - NUM_NEG_SAMPLING=4
-      - EPOCHS=400
+      - EPOCHS=1
+      - TRANSFORMER_LAYERS=6
+      - TRANSFORMER_DFF=2048
+      - TRANSFORMER_HEADS=8
+      - DROPOUT_RATE=0.1
+      - BATCH_SIZE=64
     # runtime: nvidia
     volumes:
       - ./database:/database:ro
+      - ./results:/results
+
+  training:
+    build: training/
+    container_name: training
+    environment:
+      - W2V_EMBED_SIZE=128
+      - EPOCHS=1
+      - TRANSFORMER_LAYERS=4
+      - TRANSFORMER_DFF=512
+      - TRANSFORMER_HEADS=8
+      - DROPOUT_RATE=0.1
+      - BATCH_SIZE=64
+      - TRAINING=1
+    volumes:
       - ./results:/results
 
   genmat:
