--- a/jupyter_notebooks/requirements.txt
+++ b/jupyter_notebooks/requirements.txt
@@ -1,7 +1,13 @@
-jupyterlab_theme_solarized_dark
 drain3
-plotly==4.5
-jupyter-dash
+plotly>=4.5
+jupyter_dash
 tqdm
-jupyterlab-horizon-theme
-jupyterthemes
+jupyterlab-lsp
+aquirdturtle_collapsible_headings
+ipdb
+jax
+sklearn
+gensim
+pandas
+numpy
+tensorboard
