--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -1,13 +1,13 @@
 drain3
 plotly>=4.5
 jupyter_dash
-tqdm
-jupyterlab-lsp
+#tqdm
+#jupyterlab-lsp
 aquirdturtle_collapsible_headings
-ipdb
-jax
+#ipdb
+#jax
 sklearn
-gensim
-pandas
-numpy
-tensorboard
+#gensim
+#pandas
+#numpy
+#tensorboard
