--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,31 +69,10 @@ services:
     init: true
     stdin_open: true
     tty: true
-
-  # jupyter_gpu:
-  #   build: 
-  #     context: jupyter_notebooks_gpu/
-  #     args:
-  #       - CUDA=11.0
-  #   container_name: jupyter_gpu
-  #   environment:
-  #     - JUPYTER_ENABLE_LAB=yes
-  #     - CUDA_VERSION=11.0.3
-  #     - PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-  #     - LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64
-  #     - NVIDIA_VISIBLE_DEVICES=all
-  #     - NVIDIA_REQUIRE_CUDA=cuda>=11.0 brand=tesla,driver>=418,driver<419 brand=tesla,driver>=440,driver<441 brand=tesla,driver>=450,driver<451
-  #   volumes:
-  #     - ./results:/home/jovyan/results
-  #     - ./database:/home/jovyan/database
-  #     - ./jupyter_notebooks:/home/jovyan/jupyter_notebooks
-  #   ports:
-  #     - "8888:8888"
-  #     - "8050:8050"
-  #   deploy:
-  #     resources:
-  #       reservations:
-  #         devices:
-  #         - driver: nvidia
-  #           count: 1
-  #           capabilities: [gpu, utility, compute]
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            count: 1
+            capabilities: [gpu, utility, compute]
