--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -1,13 +1,15 @@
 drain3
 plotly>=4.5
 jupyter_dash
-#tqdm
-#jupyterlab-lsp
+tqdm
 aquirdturtle_collapsible_headings
 ipdb
-#jax
+jax
 sklearn
-#gensim
-#pandas
-#numpy
-#tensorboard
+gensim
+pandas
+numpy
+tensorboard
+flask
+python-lsp-server[all]
+tensorflow
