--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ data/*
 
 # ignore all Dash Cache since they are generated
 results/dash_cache/*
+results/.ipynb_checkpoints/
+results/debug.ipynb
 
 !data/.gitkeep
 !results/.gitkeep
