--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,26 +40,25 @@ services:
       - "8050:8050"
 
   jupyter:
-    gpu-jupyter:
-      build: /jupyter/.build
-      deploy:
-        resources:
-          reservations:
-            devices:
-              - capabilities:
-                - gpu
-      ports:
-        - 8848:8888
-      volumes:
-        - ./results:/home/jovyan/results
-        - ./data:/home/jovyan/data
-        - ./assets:/home/jovyan/assets
-      environment:
-        GRANT_SUDO: "yes"
-        JUPYTER_ENABLE_LAB: "yes"
-        NB_UID: ${JUPYTER_UID:-1000}
-        NB_GID: ${JUPYTER_GID:-1000}
-      # enable sudo permissions
-      user:
-        "root"
-      restart: always
+    build: jupyter/.build/
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities:
+              - gpu
+    ports:
+      - 8888:8888
+    volumes:
+      - ./results:/home/jovyan/results
+      - ./data:/home/jovyan/data
+      - ./assets:/home/jovyan/assets
+    environment:
+      GRANT_SUDO: "yes"
+      JUPYTER_ENABLE_LAB: "yes"
+      NB_UID: ${JUPYTER_UID:-1000}
+      NB_GID: ${JUPYTER_GID:-1000}
+    # enable sudo permissions
+    user:
+      "root"
+    restart: always
