Finished GPU Notebook and Sentence Piece Addition

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,12 +41,14 @@ services:
 
   jupyter:
     build: jupyter/.build/
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - capabilities:
-              - gpu
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - capabilities:
+              # - gpu
+              # - utility
+              # - compute
     ports:
       - 8888:8888
     volumes:
