--- a/jupyter/src/Dockerfile.custom
+++ b/jupyter/src/Dockerfile.custom
@@ -10,3 +10,30 @@ RUN mkdir $FONT_DIR/FiraCode/ && \
 COPY FiraCode-Retina.ttf $FONT_DIR/FiraCode
 
 COPY config/ /home/$NB_USER/.jupyter/
+
+USER $NB_UID
+
+# Install Python 3 packages
+RUN conda install --quiet --yes \
+    'xeus-python' \
+    'jupyterlab-lsp' \
+    'jupyterlab-git' \
+    'jupyterlab>=3.0' \
+    'nodejs' \ 
+    'plotly>=4.5' \ 
+    'jupyter-dash' \ 
+    'tqdm' \
+    'ipdb' \
+    'jax' \
+    'numpy' \
+    'tensorboard' \
+    'flask' \
+    'python-lsp-server[all]' \
+    'sentencepiece' \
+    'pyyaml' && \
+    conda clean --all -f -y && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
+
+COPY requirements.txt .
+RUN pip install -r requirements.txt
