added configs back in

--- a/jupyter/src/Dockerfile.custom
+++ b/jupyter/src/Dockerfile.custom
@@ -2,7 +2,7 @@ LABEL authors="The Optimal Policies"
 
 USER root
 
-RUN mkdir /usr/local/share/fonts
+#RUN mkdir /usr/local/share/fonts
 ENV FONT_DIR /usr/local/share/fonts
 RUN mkdir $FONT_DIR/FiraCode/ && \
     chown $NB_UID:$NB_GID $FONT_DIR/FiraCode
@@ -10,8 +10,6 @@ RUN mkdir $FONT_DIR/FiraCode/ && \
 COPY FiraCode-Retina.ttf $FONT_DIR/FiraCode
 
 COPY config/ /home/$NB_USER/.jupyter/
-
-USER $NB_UID
 
 # Install Python 3 packages
 RUN conda install --quiet --yes \
@@ -37,3 +35,5 @@ RUN conda install --quiet --yes \
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+
+USER $NB_UID
