--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,14 +41,14 @@ services:
 
   jupyter:
     build: jupyter/.build/
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - capabilities:
-              # - gpu
-              # - utility
-              # - compute
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities:
+              - gpu
+              - utility
+              - compute
     ports:
       - 8888:8888
     volumes:
