--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,16 @@
 lab/data/
 
 # ignore all Dash Cache since they are generated
-results/dash_cache/*
-results/.ipynb_checkpoints/
-results/debug.ipynb
+lab/results/dash_cache/*
+lab/assets/notebooks//.ipynb_checkpoints/
+lab/results/debug.ipynb
 
-!data/.gitkeep
-!results/.gitkeep
-!docs/.gitkeep
 
-/venv/
+!lab/data/.gitkeep
+!lab/results/.gitkeep
+!lab/docs/.gitkeep
+
+venv/
 
 # Ignore all zone identifier files with pushing from WSL2 on windows 
 *:Zone.Identifier
