Cleaned notebook up by adding configurations folder, adding two new libraries, and adding package relation diagram.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.joblib
 
 lab/data/
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+__pycache__
 
 # ignore all Dash Cache since they are generated
 lab/results/dash_cache/*
