--- a/lab/assets/notebooks/training_results/model-best/config.cfg
+++ b/lab/assets/notebooks/training_results/model-best/config.cfg
@@ -10,8 +10,8 @@ seed = 0
 
 [nlp]
 lang = "en"
-pipeline = ["tok2vec","ner"]
-batch_size = 1000
+pipeline = ["tok2vec","parser","ner"]
+batch_size = 128
 disabled = []
 before_creation = null
 after_creation = null
@@ -36,9 +36,42 @@ use_upper = true
 nO = null
 
 [components.ner.model.tok2vec]
+@architectures = "spacy.Tok2Vec.v2"
+
+[components.ner.model.tok2vec.embed]
+@architectures = "spacy.MultiHashEmbed.v2"
+width = 96
+attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
+rows = [5000,2500,2500,2500]
+include_static_vectors = true
+
+[components.ner.model.tok2vec.encode]
+@architectures = "spacy.MaxoutWindowEncoder.v2"
+width = 96
+depth = 4
+window_size = 1
+maxout_pieces = 3
+
+[components.parser]
+factory = "parser"
+learn_tokens = false
+min_action_freq = 30
+moves = null
+update_with_oracle_cut_size = 100
+
+[components.parser.model]
+@architectures = "spacy.TransitionBasedParser.v2"
+state_type = "parser"
+extra_state_tokens = false
+hidden_width = 64
+maxout_pieces = 2
+use_upper = true
+nO = null
+
+[components.parser.model.tok2vec]
 @architectures = "spacy.Tok2VecListener.v1"
-width = ${components.tok2vec.model.encode.width}
-upstream = "*"
+width = 96
+upstream = "tok2vec"
 
 [components.tok2vec]
 factory = "tok2vec"
@@ -48,10 +81,10 @@ factory = "tok2vec"
 
 [components.tok2vec.model.embed]
 @architectures = "spacy.MultiHashEmbed.v2"
-width = ${components.tok2vec.model.encode.width}
-attrs = ["ORTH","SHAPE"]
-rows = [5000,2500]
-include_static_vectors = false
+width = 96
+attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
+rows = [5000,2500,2500,2500]
+include_static_vectors = true
 
 [components.tok2vec.model.encode]
 @architectures = "spacy.MaxoutWindowEncoder.v2"
@@ -122,7 +155,13 @@ eps = 0.00000001
 learn_rate = 0.001
 
 [training.score_weights]
-ents_f = 1.0
+dep_uas = 0.25
+dep_las = 0.25
+dep_las_per_type = null
+sents_p = null
+sents_r = null
+sents_f = 0.0
+ents_f = 0.5
 ents_p = 0.0
 ents_r = 0.0
 ents_per_type = null
@@ -130,7 +169,7 @@ ents_per_type = null
 [pretraining]
 
 [initialize]
-vectors = ${paths.vectors}
+vectors = "en_core_web_md"
 init_tok2vec = ${paths.init_tok2vec}
 vocab_data = null
 lookups = null
