--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,12 @@ services:
     ports:
       - 8888:8888
     environment:
-      - LAB_HOME=/home/jovyan/
       - JUPYTER_ENABLE_LAB=1
     volumes:
-      - ./lab/data:${LAB_HOME}/data:rw
-      - ./lab/docs:${LAB_HOME}/docs:rw
-      - ./lab/libs:${LAB_HOME}/libs:rw
-      - ./lab/models:${LAB_HOME}/models:rw
-      - ./lab/results:${LAB_HOME}/results:rw
-      - ./lab/notebooks:${LAB_HOME}/notebooks:rw
-      - ./lab/personal-notebooks:${LAB_HOME}/personal-notebooks:rw
+      - ./lab/data:/home/jovyan/data:rw
+      - ./lab/docs:/home/jovyan/docs:rw
+      - ./lab/libs:/home/jovyan/libs:rw
+      - ./lab/models:/home/jovyan/models:rw
+      - ./lab/results:/home/jovyan/results:rw
+      - ./lab/notebooks:/home/jovyan/notebooks:rw
+      - ./lab/personal-notebooks:/home/jovyan/personal-notebooks:rw
