changes cuda version to the correct number of digits 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,14 @@ version: 2.1
 jobs:
   test:
     environment:
-      CUDA_VER: 11.3
+      CUDA_VER: 11.3.1
     docker:
       - image: samuel62/machine_learning_lab:mll_cuda_$CUDA_VER # the primary container, where your job's commands are run
         auth:
           username: samuel62
           # password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
-      - run: ls -l /usr/local | grep cuda
+      - run: ls -l /usr/local | grep cuda-11.3
 
 workflows:
   check_cuda:
