adds dockerhub secrets

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - image: samuel62/machine_learning_lab:mll_cuda_$CUDA_VER # the primary container, where your job's commands are run
         auth:
           username: samuel62
-          # password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - run: ls -l /usr/local | grep cuda-11.3
 
