--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
   test:
     environment:
       CUDA_VER: 11.3.1
+      DISCORD_WEBHOOK: https://discord.com/api/webhooks/925449691682988072/CnB9aJGUkw1RVcm6OoctFxuKnUxv04anB6Lxzn0-8HOWfAHw13d3VEkQ5l-ceuXsL7In
     docker:
       - image: samuel62/machine_learning_lab:mll_cuda_$CUDA_VER # the primary container, where your job's commands are run
         auth:
