--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,8 @@ jobs:
   test:
     environment:
       CUDA_VER: 11.3.1
-    docker:
-      - image: samuel62/machine_learning_lab:mll_cuda_$CUDA_VER # the primary container, where your job's commands are run
-        auth:
-          username: samuel62
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    machine:
+          image: ubuntu-2004:202010-01
     steps:
       - run: 
           name: pytest
